// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword Expect to match snapshot on desktop when requestSent is true 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-k3u9d3-MuiContainer-root"
  >
    <form
      class="MuiBox-root css-10klw3m"
      novalidate=""
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-y9c59e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 css-100prk6-MuiTypography-root"
          >
            Reset Password
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-1upsqny-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-4s7p8a-MuiTypography-root"
          >
            A link to reset your password has been sent to:
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1a6xgov-MuiTypography-root"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 css-4s7p8a-MuiTypography-root"
          >
            Check your inbox and follow the link to reset your password.
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1fjdlt3-MuiDivider-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-18ky2n6-MuiTypography-root"
          >
            Don't see the email?
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
            data-testid="resend-link-button"
            tabindex="0"
            type="button"
          >
            Resend Link
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ForgotPassword Expect to match snapshot on desktop when transaction is not undefined 1`] = `
<div>
  <div
    class="MuiBox-root css-1igv2f2"
  >
    <div
      class="MuiBox-root css-1017c5q"
    >
      <h1
        class="MuiTypography-root MuiTypography-h3 css-xephrw-MuiTypography-root"
      >
        Create Password
      </h1>
      <form
        class="MuiBox-root css-19n8dai"
        novalidate=""
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
              data-testid="passwordInput"
            >
              <label
                class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-focused Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="true"
                for="password"
                id="password-label"
              >
                Password
                <span
                  aria-hidden="true"
                  class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-describedby="password-helper-text"
                  aria-invalid="false"
                  class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                  data-testid="registration-password-input"
                  id="password"
                  name="password"
                  placeholder="Enter Password"
                  required=""
                  type="password"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-1z7n62"
                  >
                    <span>
                      Password
                       
                      *
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-focused Mui-required css-15h6cqt-MuiFormHelperText-root"
                data-testid="password-msg"
                id="password-helper-text"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </p>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="true"
                for="confirm-password"
                id="confirm-password-label"
              >
                Confirm Password
                <span
                  aria-hidden="true"
                  class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-describedby="confirm-password-helper-text"
                  aria-invalid="false"
                  class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                  data-testid="registration-confirm-password-input"
                  id="confirm-password"
                  name="confirmPassword"
                  placeholder="Confirm Password"
                  required=""
                  type="password"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-1z7n62"
                  >
                    <span>
                      Confirm Password
                       
                      *
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                id="confirm-password-helper-text"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-1wdcwow-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-elmnnq-MuiTypography-root"
          >
            <svg
              class="MuiBox-root css-12z0wuy"
              sx="[object Object]"
            >
              info.svg
            </svg>
            Password Requirements
          </p>
          <div
            class="MuiBox-root css-1pqb9cl"
          >
            <p
              class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            >
              Minimum of 8 characters
            </p>
            <p
              class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            >
              Must contain at least one uppercase letter
            </p>
            <p
              class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            >
              Must contain at least one number
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-sc2lyq"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-8g0kll-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
            >
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
              >
                <span
                  class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-gnfeqs-MuiButtonBase-root-MuiCheckbox-root"
                  data-testid="terms-of-sale-checkbox"
                >
                  <input
                    class="PrivateSwitchBase-input css-1m9pwf3"
                    data-indeterminate="false"
                    name="termsOfSale"
                    type="checkbox"
                    value="false"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                    data-testid="CheckBoxOutlineBlankIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  I agree to the
                   
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0g8bi-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-sale-link"
                    href="/terms-of-sale"
                    target="_blank"
                  >
                    Terms of Sale
                  </a>
                </p>
              </label>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
            >
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
              >
                <span
                  class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-gnfeqs-MuiButtonBase-root-MuiCheckbox-root"
                  data-testid="privacy-policy-checkbox"
                >
                  <input
                    class="PrivateSwitchBase-input css-1m9pwf3"
                    data-indeterminate="false"
                    name="privacyPolicy"
                    type="checkbox"
                    value="false"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                    data-testid="CheckBoxOutlineBlankIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  I agree to the
                   
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0g8bi-MuiTypography-root-MuiLink-root"
                    data-testid="privacy-policy-link"
                    href="/privacy-policy"
                    target="_blank"
                  >
                    Privacy Policy
                  </a>
                </p>
              </label>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-jivcqj-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-183bnkw"
          >
            <button
              class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-x51jcu-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
              data-testid="continueButton"
              id="mui-1"
              tabindex="0"
              type="submit"
            >
              Continue
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ForgotPassword Expect to match snapshot on desktop with default data 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-k3u9d3-MuiContainer-root"
  >
    <form
      class="MuiBox-root css-10klw3m"
      novalidate=""
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-y9c59e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 css-100prk6-MuiTypography-root"
          >
            Reset Password
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-4s7p8a-MuiTypography-root"
          >
            Please enter the email address associated with your account to reset your password.
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-2fsmco-MuiGrid-root"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
          >
            <label
              class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="true"
              for="email"
              id="email-label"
            >
              Email Address
              <span
                aria-hidden="true"
                class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-describedby="email-helper-text"
                aria-invalid="false"
                class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                data-testid="email-address-input"
                id="email"
                name="email"
                placeholder="Enter Email Address"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1z7n62"
                >
                  <span>
                    Email Address
                     
                    *
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
              id="email-helper-text"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-son80h-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  css-1iivgkm-MuiButtonBase-root-MuiButton-root"
            data-testid="forgot-password-submit-button"
            tabindex="0"
            type="submit"
          >
            Submit
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container css-1w7vd0f-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1sy330z-MuiTypography-root"
          >
            Need an Account?
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/register"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root MuiBox-root css-1domezh-MuiButtonBase-root-MuiButton-root"
              data-testid="register-button"
              tabindex="0"
              type="button"
            >
              Register
            </button>
          </a>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ForgotPassword Expect to match snapshot on desktop with email error 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-k3u9d3-MuiContainer-root"
  >
    <form
      class="MuiBox-root css-10klw3m"
      novalidate=""
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-y9c59e-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h3 css-100prk6-MuiTypography-root"
          >
            Reset Password
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-4s7p8a-MuiTypography-root"
          >
            Please enter the email address associated with your account to reset your password.
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-2fsmco-MuiGrid-root"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
          >
            <label
              class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="true"
              for="email"
              id="email-label"
            >
              Email Address
              <span
                aria-hidden="true"
                class="MuiInputLabel-asterisk MuiFormLabel-asterisk Mui-error css-kclkbf-MuiFormLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-describedby="email-helper-text"
                aria-invalid="true"
                class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                data-testid="email-address-input"
                id="email"
                name="email"
                placeholder="Enter Email Address"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1z7n62"
                >
                  <span>
                    Email Address
                     
                    *
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
              id="email-helper-text"
            >
              Email Address is required
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-son80h-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  css-1iivgkm-MuiButtonBase-root-MuiButton-root"
            data-testid="forgot-password-submit-button"
            tabindex="0"
            type="submit"
          >
            Submit
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container css-1w7vd0f-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1sy330z-MuiTypography-root"
          >
            Need an Account?
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/register"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root MuiBox-root css-1domezh-MuiButtonBase-root-MuiButton-root"
              data-testid="register-button"
              tabindex="0"
              type="button"
            >
              Register
            </button>
          </a>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ForgotPassword Expect to match snapshot on mobile when requestSent is true 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-k3u9d3-MuiContainer-root"
  >
    <form
      class="MuiBox-root css-10klw3m"
      novalidate=""
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1bczrpv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-19qotci-MuiTypography-root"
          >
            Reset Password
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-1upsqny-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-4s7p8a-MuiTypography-root"
          >
            A link to reset your password has been sent to:
          </p>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1a6xgov-MuiTypography-root"
          />
          <p
            class="MuiTypography-root MuiTypography-body1 css-4s7p8a-MuiTypography-root"
          >
            Check your inbox and follow the link to reset your password.
          </p>
        </div>
        <hr
          class="MuiDivider-root MuiDivider-fullWidth MuiBox-root css-1fjdlt3-MuiDivider-root"
        />
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-18ky2n6-MuiTypography-root"
          >
            Don't see the email?
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-disableElevation MuiButtonBase-root  css-l6ikmy-MuiButtonBase-root-MuiButton-root"
            data-testid="resend-link-button"
            tabindex="0"
            type="button"
          >
            Resend Link
          </button>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`ForgotPassword Expect to match snapshot on mobile when transaction is not undefined 1`] = `
<div>
  <div
    class="MuiBox-root css-f0ub0t"
  >
    <div
      class="MuiBox-root css-1ovemma"
    >
      <h1
        class="MuiTypography-root MuiTypography-h4 css-1vn8opf-MuiTypography-root"
      >
        Create Password
      </h1>
      <form
        class="MuiBox-root css-19n8dai"
        novalidate=""
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
              data-testid="passwordInput"
            >
              <label
                class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-focused Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="true"
                for="password"
                id="password-label"
              >
                Password
                <span
                  aria-hidden="true"
                  class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth Mui-focused MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-describedby="password-helper-text"
                  aria-invalid="false"
                  class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                  data-testid="registration-password-input"
                  id="password"
                  name="password"
                  placeholder="Enter Password"
                  required=""
                  type="password"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-1z7n62"
                  >
                    <span>
                      Password
                       
                      *
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-focused Mui-required css-15h6cqt-MuiFormHelperText-root"
                data-testid="password-msg"
                id="password-helper-text"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </p>
            </div>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
            >
              <label
                class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
                data-shrink="true"
                for="confirm-password"
                id="confirm-password-label"
              >
                Confirm Password
                <span
                  aria-hidden="true"
                  class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <input
                  aria-describedby="confirm-password-helper-text"
                  aria-invalid="false"
                  class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                  data-testid="registration-confirm-password-input"
                  id="confirm-password"
                  name="confirmPassword"
                  placeholder="Confirm Password"
                  required=""
                  type="password"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-1z7n62"
                  >
                    <span>
                      Confirm Password
                       
                      *
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
                id="confirm-password-helper-text"
              >
                <span
                  class="notranslate"
                >
                  ​
                </span>
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-1wdcwow-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-elmnnq-MuiTypography-root"
          >
            <svg
              class="MuiBox-root css-12z0wuy"
              sx="[object Object]"
            >
              info.svg
            </svg>
            Password Requirements
          </p>
          <div
            class="MuiBox-root css-1pqb9cl"
          >
            <p
              class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            >
              Minimum of 8 characters
            </p>
            <p
              class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            >
              Must contain at least one uppercase letter
            </p>
            <p
              class="MuiTypography-root MuiTypography-caption css-12u2emh-MuiTypography-root"
            >
              Must contain at least one number
            </p>
          </div>
        </div>
        <div
          class="MuiBox-root css-sc2lyq"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-spacing-xs-1 MuiGrid-direction-xs-column MuiGrid-grid-xs-12 css-8g0kll-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
            >
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
              >
                <span
                  class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-gnfeqs-MuiButtonBase-root-MuiCheckbox-root"
                  data-testid="terms-of-sale-checkbox"
                >
                  <input
                    class="PrivateSwitchBase-input css-1m9pwf3"
                    data-indeterminate="false"
                    name="termsOfSale"
                    type="checkbox"
                    value="false"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                    data-testid="CheckBoxOutlineBlankIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  I agree to the
                   
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0g8bi-MuiTypography-root-MuiLink-root"
                    data-testid="terms-of-sale-link"
                    href="/terms-of-sale"
                    target="_blank"
                  >
                    Terms of Sale
                  </a>
                </p>
              </label>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
            >
              <label
                class="MuiFormControlLabel-root MuiFormControlLabel-labelPlacementEnd css-j204z7-MuiFormControlLabel-root"
              >
                <span
                  class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root css-gnfeqs-MuiButtonBase-root-MuiCheckbox-root"
                  data-testid="privacy-policy-checkbox"
                >
                  <input
                    class="PrivateSwitchBase-input css-1m9pwf3"
                    data-indeterminate="false"
                    name="privacyPolicy"
                    type="checkbox"
                    value="false"
                  />
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-ptiqhd-MuiSvgIcon-root"
                    data-testid="CheckBoxOutlineBlankIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
                  />
                </span>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-1k41qqb-MuiTypography-root"
                >
                  I agree to the
                   
                  <a
                    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1a0g8bi-MuiTypography-root-MuiLink-root"
                    data-testid="privacy-policy-link"
                    href="/privacy-policy"
                    target="_blank"
                  >
                    Privacy Policy
                  </a>
                </p>
              </label>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-grid-xs-12 css-jivcqj-MuiGrid-root"
        >
          <div
            class="MuiBox-root css-1igp3lf"
          >
            <button
              class="MuiLoadingButton-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root css-x51jcu-MuiButtonBase-root-MuiButton-root-MuiLoadingButton-root"
              data-testid="continueButton"
              id="mui-2"
              tabindex="0"
              type="submit"
            >
              Continue
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ForgotPassword Expect to match snapshot on mobile with default data 1`] = `
<div>
  <div
    class="MuiContainer-root MuiContainer-maxWidthSm css-k3u9d3-MuiContainer-root"
  >
    <form
      class="MuiBox-root css-10klw3m"
      novalidate=""
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1bczrpv-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <h1
            class="MuiTypography-root MuiTypography-h4 css-19qotci-MuiTypography-root"
          >
            Reset Password
          </h1>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 css-4s7p8a-MuiTypography-root"
          >
            Please enter the email address associated with your account to reset your password.
          </p>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-2fsmco-MuiGrid-root"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root css-1vhyr2u-MuiFormControl-root-MuiTextField-root"
          >
            <label
              class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-required css-1411gyj-MuiFormLabel-root-MuiInputLabel-root"
              data-shrink="true"
              for="email"
              id="email-label"
            >
              Email Address
              <span
                aria-hidden="true"
                class="MuiInputLabel-asterisk MuiFormLabel-asterisk css-kclkbf-MuiFormLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl css-tg1mzk-MuiInputBase-root-MuiOutlinedInput-root"
            >
              <input
                aria-describedby="email-helper-text"
                aria-invalid="false"
                class="MuiOutlinedInput-input MuiInputBase-input css-1mjnin0-MuiInputBase-input-MuiOutlinedInput-input"
                data-testid="email-address-input"
                id="email"
                name="email"
                placeholder="Enter Email Address"
                required=""
                type="text"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="MuiOutlinedInput-notchedOutline css-m1dym3-MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="css-1z7n62"
                >
                  <span>
                    Email Address
                     
                    *
                  </span>
                </legend>
              </fieldset>
            </div>
            <p
              class="MuiFormHelperText-root MuiFormHelperText-sizeMedium MuiFormHelperText-contained Mui-required css-15h6cqt-MuiFormHelperText-root"
              id="email-helper-text"
            >
              <span
                class="notranslate"
              >
                ​
              </span>
            </p>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item css-son80h-MuiGrid-root"
        >
          <button
            class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-disableElevation MuiButton-fullWidth MuiButtonBase-root  css-1iivgkm-MuiButtonBase-root-MuiButton-root"
            data-testid="forgot-password-submit-button"
            tabindex="0"
            type="submit"
          >
            Submit
          </button>
        </div>
        <div
          class="MuiGrid-root MuiGrid-container css-1w7vd0f-MuiGrid-root"
        >
          <span
            class="MuiTypography-root MuiTypography-body1 css-1sy330z-MuiTypography-root"
          >
            Need an Account?
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineNone css-fe2j4-MuiTypography-root-MuiLink-root"
            href="/register"
          >
            <button
              class="MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-disableElevation MuiButtonBase-root MuiBox-root css-1domezh-MuiButtonBase-root-MuiButton-root"
              data-testid="register-button"
              tabindex="0"
              type="button"
            >
              Register
            </button>
          </a>
        </div>
      </div>
    </form>
  </div>
</div>
`;
